# mihomoapp

./: .gitignore  BUILD.md  MIHOMO_VERSION.md  PERFORMANCE_OPTIMIZATION.md  PLATFORM_SUPPORT.md  README.md  REFACTOR_SUMMARY.md  SETUP.md  UBUNTU_24.04_FIX.md  package.json  rebuild_deb.sh  start_admin.bat  start_admin.ps1  start_dev_admin.bat
client/: package.json
client/public/: index.html
client/src/: App.tsx  index.css
client/src/components/: ConfigManager.tsx  Dashboard.tsx  ProxyManager.tsx  SubscriptionManager.tsx
client/src/hooks/: useMihomoAPI.ts  useWebSocket.ts
client/src/lib/: utils.ts
mihomo-manager-unpacked/DEBIAN/: control  md5sums
server/: index.js  package.json
server/controllers/: configController.js  mihomoController.js  subscriptionController.js
tauri-app/: .eslintrc.json  .prettierignore  README.md  RULES.md  compare_delay.ps1  index.html  optimize_config.ps1  package-lock.json  package.json  prepare-resources.ps1  prepare-resources.sh  refactor-structure.md  test_delay.ps1  tsconfig.json
tauri-app/backend/: Cargo.toml  clippy.toml  platform_config.toml  rustfmt.toml  tauri.conf.json  test_yaml.rs
tauri-app/backend/examples/: test_yaml.rs  test_yaml_fixed.rs
tauri-app/backend/icons/: icon.icns
tauri-app/backend/src/: backup.rs  config.rs  config_manager.rs  error.rs  events.rs  main.rs  mihomo.rs  platform_config.rs  subscription.rs  validator.rs  watchdog.rs
tauri-app/docs/: ARCHITECTURE.md  MILESTONE_P0.md  MILESTONE_PROGRESS.md  NYANPASU_COMPARISON.md  P0_FINAL_REPORT.md  P0_PHASE1_COMPLETED.md  P0_PHASE2_COMPLETED.md  P0_PROGRESS_SUMMARY.md  README.md  REFACTOR_STRUCTURE_REPORT.md  UI_OPTIMIZATION_REPORT.md
tauri-app/frontend/: App.tsx
tauri-app/frontend/components/: BackupManager.tsx  ConfigManager.tsx  Dashboard.tsx  IPInfoCard.tsx  ProxyManager.tsx  ServiceControl.tsx  SpeedTestResultDialog.tsx  SubscriptionManager.tsx  SystemStatusCard.tsx
tauri-app/frontend/store/: appStore.ts
tauri-app/src/: App.tsx  main.tsx
tauri-app/src-tauri/: Cargo.toml  app.manifest  mihomoapp.desktop  tauri.conf.json
tauri-app/src-tauri/src/: backup.rs  config.rs  main.rs  mihomo.rs  subscription.rs  validator.rs
tauri-app/src/i18n/: index.ts
(+14 files in other folders)
