[package]
name = "mihomoapp"
version = "0.1.0"
description = "Mihomo management application"
authors = ["Alfred"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "mihomoapp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "dialog-message", "fs-read-file", "dialog-ask", "shell-execute", "fs-exists", "os-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
yaml-rust = "0.4"
anyhow = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
zip = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
